installdir = $(pkglibdir)/python/Plugins/SystemPlugins

SUBDIRS = SoftwareManager FrontprocessorUpgrade PositionerSetup Satfinder \
	SkinSelector SatelliteEquipmentControl Videomode VideoTune Hotplug \
	DefaultServicesScanner NFIFlash DiseqcTester CommonInterfaceAssignment \
	CrashlogAutoSubmit CleanupWizard VideoEnhancement WirelessLan NetworkWizard \
	TempFanControl Fancontrol FPGAUpgrade WirelessLanSetup ManualFancontrol \
	Blindscan RemoteControlCode UI3DSetup UIPositionSetup HDMICEC LEDBrightnessSetup \
	FirmwareUpgrade CrashReport 3GModemManager WirelessAccessPoint ZappingModeSelection \
	DeviceManager TransCodingSetup WOLSetup NetDrive AudioEffect AnimationSetup \
	BoxModeConfig FastChannelChange PvrDescrambleConvert

install_PYTHON =	\
	__init__.py
